--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.9",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
