--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "weather-app",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "2.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.9",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "react": "^18.0.0",
@@ -22,8 +22,8 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "sass": "^1.51.0",
     "tailwindcss": "^3.3.1",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vitest": "^1.6.0"
   }
 }
