--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "typescript": "^5.5.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.3.1",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "vite": "^2.9.9",
-    "vitest": "^1.6.0"
+    "vite": "^2.9.9"
   }
 }
