--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@types/jest": "^29.5.12",
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "typescript": "^5.5.2"
@@ -25,4 +25,4 @@
     "tailwindcss": "^3.3.1",
     "vite": "^2.9.9"
   }
-}1
+}
